--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,6 @@
 
-add_library(raku SHARED bract.c)
+file(GLOB RAKU_SRC RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.c)
+add_library(raku SHARED ${RAKU_SRC})
 target_link_libraries(raku ${LIBS})
+
 
