cmake build system

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,7 +2,8 @@
 file(GLOB RAKU_TESTS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} test_*.c)
 
 foreach(TEST_CFILE ${RAKU_TESTS}) 
-  get_filename_component(TEST_EXE TEST_CFILE NAME_WE)
+  get_filename_component(TEST_EXE ${TEST_CFILE} NAME_WE)
+  message(${TEST_EXE})
   add_executable(${TEST_EXE} ${TEST_CFILE})
   add_test(${TEST_EXE} ${TEST_EXE})
 endforeach(TEST_CFILE)
