Time to get a few things in order.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,10 @@
 
-file(GLOB RAKU_SRC RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.c)
-add_library(raku SHARED ${RAKU_SRC})
-target_link_libraries(raku ${LIBS})
+set (RAKU_SRC
+  brobject.c
+)
+add_library(libraku SHARED ${RAKU_SRC})
+target_link_libraries(libraku ${LIBS})
+add_executable(raku ${RAKU_SRC} main.c)
+target_link_libraries(raku libraku ${LIBS})
 
 
